<resources>
    <string name="app_name">DarQ</string>
    <string name="xposed_desc">Prevent apps from disabling the use of Force Dark</string>
    <string name="item_switch_main_title">Enable DarQ</string>
    <string name="item_switch_main_subtitle">DarQ only works while the system is in dark mode</string>
    <string name="item_switch_main_subtitle_off">DarQ requires the system dark mode be enabled to work</string>
    <string name="item_whitelist_title">Force Dark Apps</string>
    <string name="item_whitelist_content">Select apps to have Force Dark enabled</string>
    <string name="item_header_options">Options</string>
    <string name="item_oxygen_force_title">Oxygen OS Force Dark</string>
    <string name="item_oxygen_force_content">Enable the Oxygen OS \"Entire World\" force dark (applies to most apps)</string>
    <string name="item_day_night_auto_title">Auto Dark Theme</string>
    <string name="item_day_night_auto_content">Automatically enable dark theme at sunset and disable at sunrise</string>
    <string name="item_advanced_options_title">Advanced Options</string>
    <string name="item_advanced_options_content">Change settings for always using force dark and app switching</string>
    <string name="item_always_use_force_dark_title">Always use Force Dark</string>
    <string name="item_always_use_force_dark_content">Ignore the list of Force Dark apps and instead have Force Dark <b>always enabled</b>, for all apps.</string>
    <string name="item_send_app_closes_title">Listen for App Closes</string>
    <string name="item_send_app_closes_content">Disables Force Dark when an app in the Force Dark list is closed. This leads to more instances where Force Dark may not be applied quickly enough to an app when switching between apps.</string>
    <string name="item_header_about">About</string>
    <string name="item_about_faq_title">Frequently Asked Questions</string>
    <string name="item_about_title">DarQ v%1s</string>
    <string name="item_about_content">Created by Kieron Quinn / Quinny899 @ XDA\nChinese translation by 123Duo3</string>
    <string name="item_developer_options_title">Developer Options</string>
    <string name="item_developer_options_monet_color_picker_title">Monet Color Picker</string>
    <string name="item_developer_options_monet_color_picker_content">Pick a color to use from your wallpaper</string>
    <string name="item_developer_options_kill_service_title">Kill duplicate services</string>
    <string name="item_developer_options_kill_service_content">Kill any duplicate DarQ services, this shouldn\'t be required due to how the service is handled, but may be if you switch between Shizuku and root modes.</string>
    <string name="item_developer_options_kill_service_toast_success">Success</string>
    <string name="item_developer_options_kill_service_toast_failed">Failed</string>
    <string name="item_developer_options_service_info">Service Info</string>
    <string name="item_developer_options_service_info_not_connected">Not Connected</string>
    <string name="item_developer_options_service_info_connected">Connected, service type: %1s</string>
    <string name="item_backup_restore_title">Backup &amp; Restore</string>
    <string name="item_backup_restore_content">Save and restore your DarQ config to device or the cloud</string>
    <string name="item_backup_restore_backup">Backup</string>
    <string name="item_backup_restore_backup_creating">Creating Backup…</string>
    <string name="item_backup_restore_backup_success">Backup created</string>
    <string name="item_backup_restore_backup_failed">Backup failed</string>
    <string name="item_backup_restore_restore_success">Restored successfully</string>
    <string name="item_backup_restore_restore_failed">Restore failed</string>
    <string name="item_backup_restore_restore_running">Restoring Backup…</string>
    <string name="item_backup_restore_restore">Restore</string>
    <string name="item_xposed_title">Xposed Module</string>
    <string name="item_xposed_content">Change settings of the DarQ Xposed module</string>
    <string name="item_xposed_aggressive_dark_title">Aggressive Force Dark</string>
    <string name="item_xposed_aggressive_dark_content">Override apps changing theme to a light style when in dark mode. This may cause color issues in some apps.</string>
    <string name="item_xposed_invert_status_bar_fix_title">Fix Status Bar Inversion</string>
    <string name="item_xposed_invert_status_bar_fix_content">Attempt to disable status bar inversion in force dark apps, fixing dark icons on dark background</string>
    <string name="item_xposed_info_title">Xposed Notes</string>
    <string name="item_xposed_info_content">If you are using EdXposed in app whitelist mode, or are using lsposed, you must also enable all the apps you want to apply to in your Xposed manager, as well as in DarQ.\nApps must be restarted after settings changes for them to apply.\nIf a setting or newly selected force dark app is not applying, try rebooting, launching DarQ then launching your selected app.\n<b>Warning:</b> If you uninstall Xposed or enable/disable DarQ\'s module, your DarQ settings may be reset due to Xposed\'s internal settings hooks. Use the backup/restore feature to save your settings before doing this.</string>
    <string name="color_picker_unavailable">Monet Color Picker unavailable for the currently selected wallpaper</string>
    <string name="loading_service_connect">Connecting to service…</string>
    <string name="snackbar_syncing_text">Syncing changes with service…</string>
    <string name="snackbar_syncing_complete_text">Changes synced with service.</string>
    <string name="snackbar_syncing_failed_text">Failed to sync changes. Changes will be applied on next restart.</string>
    <string name="snackbar_syncing_failed_button">More Info</string>
    <string name="loading_apps">Loading apps…</string>
    <string name="search">Search</string>
    <string name="app_search_empty">Nothing found</string>
    <string name="menu_app_picker_show_non_launchable_apps">Show non-launchable apps\t</string>
    <string name="bottom_sheet_shizuku_not_running_title">Shizuku Not Running</string>
    <string name="bottom_sheet_shizuku_not_running_content">Shizuku is installed but the service has not been started. Open Shizuku and start the service via ADB to continue.</string>
    <string name="bottom_sheet_shizuku_not_running_positive">Launch Shizuku</string>
    <string name="bottom_sheet_shizuku_not_running_negative">Close</string>
    <string name="bottom_sheet_service_timeout_title">Service Timeout</string>
    <string name="bottom_sheet_service_timeout_content">Timed out starting/connecting to the DarQ service. Try rebooting your device.</string>
    <string name="bottom_sheet_service_timeout_positive">Close</string>
    <string name="bottom_sheet_shizuku_not_installed_title">Shizuku Not Installed</string>
    <string name="bottom_sheet_shizuku_not_installed_content">Shizuku is not installed and your device is not rooted (or you denied root permissions). Please install Shizuku to use DarQ without root.</string>
    <string name="bottom_sheet_shizuku_not_installed_positive">Get Shizuku</string>
    <string name="bottom_sheet_shizuku_not_installed_negative">Close</string>
    <string name="bottom_sheet_shizuku_not_installed_neutral">More Info</string>
    <string name="bottom_sheet_shizuku_more_info_title">Shizuku</string>
    <string name="bottom_sheet_shizuku_more_info_content"><b>Shizuku</b> is an app and framework for apps to run code with ADB permissions.\nMuch like the ADB script used in previous versions of DarQ, you must start its service once per boot.\nHowever, unlike the script, Shizuku allows apps that have your permission (and implement the framework, like DarQ does), to start their own services off it, without needing another command. This is very similar to root apps and Superuser, in fact Shizuku is basically that - a Superuser-like framework for running elevated code.\nShizuku also allows you to use Wireless Debugging on Android 11 and above to connect <i>to your own device</i> and start the service <b>without needing a PC.</b></string>
    <string name="boot_foreground_service_notification_title">DarQ</string>
    <string name="boot_foreground_service_notification_content">Starting DarQ service…</string>
    <string name="boot_foreground_service_notification_failed_title">Failed to start DarQ service</string>
    <string name="boot_foreground_service_notification_failed_content">Tap to open DarQ and try again</string>
    <string name="boot_foreground_service_notification_shizuku_title">DarQ Shizuku Service</string>
    <string name="boot_foreground_service_notification_shizuku_content">DarQ requires Shizuku\'s service to be started to work after a reboot, tap to open Shizuku</string>
    <string name="notification_channel_boot_startup_title">Start up</string>
    <string name="notification_channel_boot_startup_description">Notifications shown during start up on boot process</string>
    <string name="notification_channel_boot_auto_dark_title">Auto Dark</string>
    <string name="notification_channel_boot_auto_dark_description">Notification shown when switching to/from dark mode automatically at sunrise/sunset</string>
    <string name="auto_dark_foreground_notification_title">DarQ Auto Dark Theme</string>
    <string name="auto_dark_foreground_notification_content">Applying theme change…</string>
    <string name="auto_dark_foreground_notification_content_changes">Applying changes…</string>
    <string name="auto_dark_foreground_notification_failed_title">DarQ Auto Dark Theme</string>
    <string name="auto_dark_foreground_notification_failed_content">Failed to apply theme, try rebooting your device.</string>
    <string name="dialog_location_permission_text">Allow <b>DarQ</b> to use your location to get sunrise &amp; sunset times?</string>
    <string name="dialog_location_permission_use_location">Use Location</string>
    <string name="dialog_location_permission_use_timezone">Use Time Zone\n<small>(less accurate)</small></string>
    <string name="chip_donate">Donate</string>
    <string name="chip_twitter">Follow me on Twitter</string>
    <string name="chip_github">GitHub</string>
    <string name="chip_xda">XDA Thread</string>
    <string name="menu_open_source_libraries">Open source libraries</string>
    <string name="bottom_sheet_update_available_title">Update Available</string>
    <string name="bottom_sheet_update_available_positive">Download</string>
    <string name="bottom_sheet_update_available_negative">Close</string>
    <string name="bottom_sheet_update_available_neutral">View on GitHub</string>
    <string name="download_manager_description">Downloading update…</string>
    <string name="bs_update_download_failed">Download failed</string>

</resources>
