<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_gravity="bottom">

    <TextView
        android:id="@+id/backup_restore_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:text="@string/item_backup_restore_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Darq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/backup_restore_backup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_8"
        android:background="@drawable/button_background_backup_restore"
        android:foreground="@drawable/rounded_ripple_36"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        app:layout_constraintEnd_toStartOf="@id/backup_restore_restore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backup_restore_title"
        tools:backgroundTint="@color/icon_circle_0">

        <ImageView
            android:id="@+id/backup_restore_ic_backup"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_backup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/item_backup_restore_backup"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Darq"
            android:textColor="?android:textColorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/backup_restore_restore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_8"
        android:layout_marginTop="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        android:background="@drawable/button_background_backup_restore"
        android:foreground="@drawable/rounded_ripple_36"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backup_restore_backup"
        app:layout_constraintTop_toBottomOf="@id/backup_restore_title"
        tools:backgroundTint="@color/icon_circle_0">

        <ImageView
            android:id="@+id/backup_restore_ic_restore"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_restore_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/item_backup_restore_restore"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Darq"
            android:textColor="?android:textColorPrimary" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backup_restore_cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginEnd="@dimen/padding_16"
        android:fontFamily="@font/google_sans_text_medium"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backup_restore_restore" />

</androidx.constraintlayout.widget.ConstraintLayout>